packages/taquito-michel-codec/test/contracts_013/ill_typed/create_contract_rootname.tz
# this contract creates a contract
# this contract will trigger an error to be thrown by the parser due to the annotation being at the top level instead of inside a parameter type
parameter unit;
storage (option address);
code { DROP;
       UNIT; # starting storage for contract
       AMOUNT;                   # Push the starting balance
       NONE key_hash;                 # No delegate
       CREATE_CONTRACT          # Create the contract
         { parameter %root unit ;
           storage unit ;
           code
             { CDR;
               NIL operation;
               PAIR; } };
       DIP {SOME;NIL operation}; CONS ; PAIR} # Ending calling convention stuff
